# 3d_viewer

./: .gitignore  CMakeLists.txt  Dox.texi  Makefile  ViewerInterface.ui  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h  options_window.cpp  options_window.h  options_window.ui  viewport.cpp  viewport.h
QtGifImage-master/src/gifimage/: qgifimage.cpp
aphins/: aphins.c  aphins.h
parser/: parser.c  parser.h
parser/test/: tests.c
